# coquiman_jam

./: CMakeLists.txt  LICENSE  Makefile
kit/include/: audio.h  bitmap.h  display.h  input.h  kit.h  maths.h  monitor.h  multiplayer.h  palette.h  queue.h  scheduler.h  sprites.h  stage.h  tilemap.h  typedefs.h
kit/src.a5/: allegro.h  audio.c  bitmap.c  display.c  input.c  kit.c  monitor.c  palette.c  sprites.c  tilemap.c
kit/src.common/: bitmap_common.c  kit_common.c  maths_common.c  queue_common.c  scheduler_common.c  tilemap_common.c
kit/src.gba/: audio.c  bitmap.c  display.c  gba.h  input.c  kit.c  monitor.c  palette.c  sprites.c  tilemap.c
music/: despath.s3m  track_0.s3m
resources/: convert.cmd  convert.sh  flatbuilding.tsx  game_palette.gpl  gfx_level.tsx  gfx_titlebkg_tiled.tmx  gfx_titlebkg_tiled.tsx  gfx_titlefgn_tiled.tmx  gfx_titlefgn_tiled.tsx  map_level.tmx  pal_game.gpl  res_graphics_level.c  res_graphics_level.h  res_graphics_title.c  res_graphics_title.h  res_graphics_titlebkg.c  res_graphics_titlebkg.h  res_graphics_titlef.c  res_graphics_titlef.h  res_graphics_titles.c  res_graphics_titles.h  res_map_level.c  res_map_level.h  res_map_title.c  res_map_title.h  res_map_titlef.c  res_map_titlef.h  res_palette.c  res_palette.h  res_palette_game.c  res_palette_game.h
resources/wip/: CoqGunman.ase  CoqTitle2Anim.ase  CoquimanTitleText.ase  flatsbuildingmap.tmx
src/: boot.c  boot.h  intro.c  intro.h  main.c  sprites_pmprog.c  sprites_pmprog.h
